Initial support for virtual thread migration through thread pools